css-files/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

ul {
  list-style-type: none;
}

body {
  height: 100vh;
  width: 100%;
  display: grid;
  grid-template-columns: clamp(200px, 20%, 300px) 1fr;
  grid-template-rows: 200px 1fr;
  /* grid-template-rows: minmax(200px, 2fr) minmax(300px, 8fr); */
  grid-template-areas: 
  "dashboard-menu top-banner"
  "dashboard-menu  main-dashboard"
  ;
}

#dashboard-menu {
  grid-area: dashboard-menu;
  background-color: aqua;
  display: grid;

  padding: 10px;
  grid-template-rows: 1fr 5fr;
}

#dashboard-menu > * {
  background-color: blue;
}

#burger {
  grid-row: 1 / 2;
  min-height: 150px;
}

#options {
  display: grid;
  grid-template-rows: 10fr;
  gap: 5px;
}

#options * {
  background-color: aliceblue;
}

#options ul {
  display: grid;
  grid-template-rows: repeat(9, clamp(30px, 8%, 50px));
  overflow: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

#options ul::-webkit-scrollbar {
  display: none;
}


#top-banner {
  grid-area: top-banner;
  background-color: orange;
  display: grid;
  grid-template-columns: 5fr 2fr;
  grid-template-rows: 2fr 3fr;
  padding-left: 5%;
  padding-right: 5%;
}

#top-banner .top-left {
  background-color: beige;
  grid-area: 1 / 1 / 2 / 2;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

#top-banner .top-right {
  background-color: yellow;
  grid-area: 1 / 2 / 2 / 3;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

#top-banner .bottom-left {
  background-color: green;
  grid-area: 2 / 1 / 3 / 2;
  display: grid;
  grid-template-columns: 1fr 5fr;
  grid-template-rows: 1fr 1fr;
  column-gap: 20px;
  align-items: center;
}

.bottom-left .prof-pic {
  grid-area: 1 / 1 / -1 / 2;
}

.bottom-left .greeting {
  grid-area: 1 / 2 / 2 / -1;
  border: solid black;
  display: flex;
  height: 100%;
  align-items: flex-end;
}

.bottom-left .handle {
  grid-area: 2 / 2 / 3 / 3;
  border: solid white;
  display: flex;
  height: 100%;
}

#top-banner .bottom-right {
  background-color: blue;
  grid-area: 2 / 2 / 3 / 3;
  display: flex;
  justify-content: flex-end;
}

#top-banner .bottom-right .create {
  display: flex;
  align-items: center;
}

#main-dashboard {
  grid-area: main-dashboard;
  background-color: purple;
}

